# hoogle-gtk

./: LICENSE  README.md  hoogle-gtk.cabal  stack.yaml
res/: #main-window.ui#  comp-row.ui  function-row.ui  hoogle-gtk.desktop  main-window.ui
src/: Format.hs  Main.hs  Network.hs  UI.hs
