name:                hoogle-gtk
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hoogle-gtk#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hoogle-gtk
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       UI
                       Network
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       reactive-banana >= 1.2,
                       gi-gtk >= 3.0 && < 3.1,
                       gi-gio >= 2.0 && < 2.1,
                       reactive-banana-gi-gtk,
                       text,
                       file-embed,
                       composition-extra,
                       hoogle
