name:                hoogle-gtk
version:             0.1.0.0
synopsis:            A GTK wrapper around Hoogle
homepage:            https://github.com/tsahyt/hoogle-gtk#readme
license:             MIT
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2018 Paul Ogris
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hoogle-gtk
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -Wall
  other-modules:       UI
                       Network
                       Format
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       reactive-banana >= 1.2,
                       gi-gtk >= 3.0 && < 3.1,
                       gi-gio >= 2.0 && < 2.1,
                       reactive-banana-gi-gtk,
                       text >= 1.2 && < 1.3,
                       file-embed >= 0.0.10,
                       composition-extra >= 2.0.0,
                       hoogle >= 5.0.12 && < 6,
                       tagsoup >= 0.14 && < 0.15,
                       directory >= 1.3
